--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tauri-xhr",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "author": "ComfyFluffy",
@@ -24,7 +24,8 @@
     "publish": "yarn build && npm publish"
   },
   "files": [
-    "dist"
+    "dist",
+    "LICENSE.md"
   ],
   "devDependencies": {
     "rimraf": "^5.0.0",
